*1.0.1* (March 6, 2006)

* Rename capistrano-ext

* Put request monitor script in user's home directory, instead of /tmp, to accomodate multiple users