@@ -1,3 +1,12 @@
+*SVN*
+
+* Fix padding on long machine names [Michael Schoen]
+
+* Fix matching of machine names [Michael Schoen]
+
+* Fix matching of load averages [Michael Schoen]
+
+
 *1.0.1* (March 6, 2006)
 
 * Rename capistrano-ext
